--- a/notations/details/index.html
+++ b/notations/details/index.html
@@ -564,7 +564,7 @@ class Notation {
           const smaAsObject = { "avgSimpleYearly": sma };
 
           //expire cache in 24h
-          setObjectExpiring(cacheKey, smaAsObject, 24 * 60 * 60 * 1000);
+          setObjectExpiring(cacheKey, smaAsObject, 2 * 24 * 60 * 60 * 1000);
           console.log("CACHE MISS: " + JSON.stringify(sma));
 
           resolve(smaAsObject);
