--- a/notations/details/index.html
+++ b/notations/details/index.html
@@ -417,8 +417,8 @@ class Notation {
     return "https://aktien-portal.at/Aktien/" + this.fallbackSymbol + "/prime/teccharts/" + this.symbol + "/";
   }
 
-  getStockChartsUri(timeSpan) {
-    const cfg = "p28951652856"; //<-SMA, EMA-> "p29326190716";
+  getStockChartsUri(timeSpan, imgOnly=false) {
+    const cfg = "p28951652856";
 
     let ts = "&yr=9&mn=0&dy=0";
     if (timeSpan.id === "5M") {
@@ -427,11 +427,17 @@ class Notation {
       ts = "&yr=2&mn=0&dy=0";
     }
 
-    return "https://stockcharts.com/h-sc/ui?p=D" + ts + "&id=" + cfg + "&s=" + this.symbol;
+    let uri = null;
+    if(imgOnly) {
+      uri = "https://stockcharts.com/c-sc/sc?p=D&" + ts + "&i=" + cfg + "&s=" + this.symbol;
+    } else {
+      uri = "https://stockcharts.com/h-sc/ui?p=D" + ts + "&id=" + cfg + "&s=" + this.symbol;
+    }
+    return uri;
   }
 
   getOutlinkUri(timeSpan) {
-    let uri = this.getStockChartsUri(timeSpan);
+    let uri = this.getStockChartsUri(timeSpan, true);
     if (this.fallbackSymbol != "") {
       uri = this.aktienPortalUri;
     }
@@ -754,6 +760,9 @@ var defaults = {
 var metadata = getObject("metadata", defaults);
 
 function findNotations(query) {
+  const tokens = query ? query.toLowerCase().split(" ") : [];
+  const tokensLength = tokens.length;
+
   const notations = [];
   for (const property in metadata) {
     if (metadata.hasOwnProperty(property)) {
@@ -767,8 +776,6 @@ function findNotations(query) {
       let matches = !query || query === null;
       if (!matches) {
         const info = (id + " " + name + " " + tags).toLowerCase();
-        const tokens = query.toLowerCase().split(" ");
-        const tokensLength = tokens.length;
         
         matches = true;
         for (let i = 0; i < tokensLength; i++) {
