--- a/notations/index.html
+++ b/notations/index.html
@@ -2495,6 +2495,7 @@ class Notation {
       } else {
         const uri = baseUri + "&function=GLOBAL_QUOTE";
         $.ajax(uri, { type: 'GET' }).done(function (response) {
+          console.log(response);
           const globalQuote = response["Global Quote"];
           const quote = {
             "price": parseFloat(globalQuote["05. price"]),
@@ -2521,9 +2522,9 @@ class Notation {
         resolve(cached);
       } else {
         const uri = baseUri + "&function=SMA&interval=daily&time_period=253&series_type=open";
-        $.ajax(uri, { type: 'GET' }).done(function (data) {
-          console.log(data);
-          const intervals = data["Technical Analysis: SMA"];
+        $.ajax(uri, { type: 'GET' }).done(function (response) {
+          console.log(response);
+          const intervals = response["Technical Analysis: SMA"];
           const latestKey = Object.keys(intervals)[0];
           const latestValue = intervals[latestKey];
           const sma = parseFloat(latestValue["SMA"]);
