--- a/notations/index.html
+++ b/notations/index.html
@@ -2166,7 +2166,7 @@ function setObjectExpiring(name, object, expiresInMs) {
 		object: object,
 		expiryDate: expiryDate
 	};
-	console.log(JSON.stringify(container));
+	//console.log(JSON.stringify(container));
 
 	setObject(name, container);
 }
