--- a/notations/config/index.html
+++ b/notations/config/index.html
@@ -132,7 +132,7 @@ function setObjectExpiring(name, object, expiresInMs) {
 		object: object,
 		expiryDate: expiryDate
 	};
-	console.log(JSON.stringify(container));
+	//console.log(JSON.stringify(container));
 
 	setObject(name, container);
 }
