--- a/notations/details/index.html
+++ b/notations/details/index.html
@@ -212,7 +212,7 @@ function setObjectExpiring(name, object, expiresInMs) {
 		object: object,
 		expiryDate: expiryDate
 	};
-	console.log(JSON.stringify(container));
+	//console.log(JSON.stringify(container));
 
 	setObject(name, container);
 }
