--- a/notations/distance/index.html
+++ b/notations/distance/index.html
@@ -131,7 +131,7 @@ function setObjectExpiring(name, object, expiresInMs) {
 		object: object,
 		expiryDate: expiryDate
 	};
-	console.log(JSON.stringify(container));
+	//console.log(JSON.stringify(container));
 
 	setObject(name, container);
 }
