--- a/notations/distance/index.html
+++ b/notations/distance/index.html
@@ -796,7 +796,7 @@ function deleteNotation(id) {
 
         let tr = '<tr>';
         //tr += '<td style="text-align:left; padding-right:20px">' + row.id + '</td>';
-        tr += '<td style="text-align:left; padding-right:20px"><a href="./details/?id=' + row.id + '">' + row.id + '</a></td>';
+        tr += '<td style="text-align:left; padding-right:20px"><a href="../details/?id=' + row.id + '">' + row.id + '</a></td>';
         tr += '<td style="text-align:left; padding-right:20px">' + row.name + '</td>';
         tr += '<td style="text-align:left; padding-right:20px">' + row.tags + '</td>';
         tr += '<td style="text-align:right; padding-left:20px">$&nbsp;' + row.price.toFixed(2) + '</td>';
