--- a/notations/distance/index.html
+++ b/notations/distance/index.html
@@ -1,7 +1,28 @@
 <html>
+<head>
+  <style>
+    body {
+      text-transform: lowercase;
+      font-family:monospace;
+      text-align:right;
+      background-color:white;
+    }
+    table {
+      border-collapse: collapse;
+    }
+    tr:nth-child(even) {
+      background: #f3f3f3;
+    }
+    td {
+      line-height: 1.5;
+    }
+    th {
+      line-height: 2;
+    }
+  </style>
+</head>
 
-<body style='text-transform: lowercase; font-family:monospace; text-align:right; background-color:white;'>
-
+<body>
   <table></table>
 
   <script type='text/javascript'>
@@ -822,12 +843,11 @@ function deleteNotation(id) {
         const row = content[i];
 
         let tr = '<tr>';
-        //tr += '<td style="text-align:left; padding-right:20px">' + row.id + '</td>';
-        tr += '<td style="text-align:left; padding-right:20px"><a href="../details/?id=' + row.id + '">' + row.id + '</a></td>';
-        tr += '<td style="text-align:left; padding-right:20px">' + row.name + '</td>';
+        tr += '<td style="text-align:left; padding-right:20px"><a target="_blank" href="../details/?id=' + row.id + '">' + row.id + '</a></td>';
+        tr += '<td style="text-align:left; padding-right:20px"><a target="_blank" href="../details/?id=' + row.id + '">' + row.name + '</a></td>';
         tr += '<td style="text-align:left; padding-right:20px">' + row.tags + '</td>';
-        tr += '<td style="text-align:right; padding-left:20px">$&nbsp;' + row.price.toFixed(2) + '</td>';
-        tr += '<td style="text-align:right; padding-left:20px">$&nbsp;' + row.sma.toFixed(2) + '</td>';
+        tr += '<td style="text-align:right; padding-left:20px">' + row.price.toFixed(2) + '&nbsp;$</td>';
+        tr += '<td style="text-align:right; padding-left:20px">' + row.sma.toFixed(2) + '&nbsp;$</td>';
         tr += '<td style="text-align:right; padding-left:20px">' + row.dist.toFixed(2) + '%</td>';
         tr += '</tr>';
         table.append(tr);
@@ -881,7 +901,7 @@ function deleteNotation(id) {
         }
       }
     }
-    setInterval(fetchAll, 30 * 1000);
+    setInterval(fetchAll, 60 * 1000);
     fetchAll();
   </script>
 </body>
